--- a/Task2.html
+++ b/Task2.html
@@ -3,6 +3,8 @@
 	     <title>
 		     Task2
 		 </title>
+		 
+		 <link rel="stylesheet" type="text/css" href="Task2.css"> </link>
 	</head>
 	
 	<body>
