--- a/Task2.html
+++ b/Task2.html
@@ -22,7 +22,7 @@
 					<li> power: <input type="text" id="second_fighter_power" maxlength="10"/> </li> <br> 
 				</ul>
 			 </form>
-			 <center> <div id="start_button" onclick="alert('OK!');" onmouseover="OverFightButton()" onmouseout="style.boxShadow = '0px 0px 0em #ffffff';"> Fight! </div> </center>
+			 <center> <div id="start_button" onclick="Start()" onmouseover="OverFightButton()" onmouseout="style.boxShadow = '0px 0px 0em #ffffff';"> Fight! </div> </center>
 		</div>
 		<script src="Task2.js"> </script> 
 	</body>
