Function fight tested successfully

--- a/Task2.html
+++ b/Task2.html
@@ -15,11 +15,13 @@
 					<li> First fighter: </li> <br>
 					<li> Name: <input type="text" id="first_fighter_name" maxlength="35"/> </li> <br>
 					<li> health: <input type="text" id="first_fighter_health" maxlength="10"/> </li> <br>
-					<li> power: <input type="text" id="first_fighter_power" maxlength="10"/> </li> <br> <br>
+					<li> power: <input type="text" id="first_fighter_power" maxlength="10"/> </li> <br> 
+					<li> point: <input type="text" id="first_fighter_point" maxlength="10"/> </li> <br> <br>
 					<li> Second fighter: </li> <br>
 					<li> Name: <input type="text" id="second_fighter_name" maxlength="35"/> </li> <br>
 					<li> health: <input type="text" id="second_fighter_health" maxlength="10"/> </li> <br>
 					<li> power: <input type="text" id="second_fighter_power" maxlength="10"/> </li> <br> 
+					<li> point: <input type="text" id="second_fighter_point" maxlength="10"/> </li> <br>
 				</ul>
 			 </form>
 			 <center> <div id="start_button" onclick="Start()" onmouseover="OverFightButton()" onmouseout="style.boxShadow = '0px 0px 0em #ffffff';"> Fight! </div> </center>
